<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_create_task"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/create_task"/>
        <item
                android:id="@+id/nav_my_tasks"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/my_tasks"/>
        <item
                android:id="@+id/nav_all_tasks"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/all_tasks"/>
        <item
                android:id="@+id/nav_messages"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/messages"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_be_approved"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/user_card"/>
            <item
                    android:id="@+id/nav_notifications"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/exit"/>
        </menu>
    </item>

</menu>
